Added the nodemon

--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,13 @@
   "description": "Graphql server with koa and apolloserver",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.18.4"
+  }
 }
