Installed koa and apollo server

--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.4"
+  },
+  "dependencies": {
+    "apollo-server-koa": "^2.0.0-rc.12",
+    "graphql": "^14.0.2",
+    "koa": "^2.5.3",
+    "koa-bodyparser": "^4.2.1",
+    "koa-cors": "0.0.16",
+    "koa-helmet": "^4.0.0"
   }
 }
