--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "description": "Graphql server with koa and apolloserver",
   "main": "src/app.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "nodemon -e js,gql src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
