--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,9 @@
   "name": "graphql-demo-frontend",
   "private": true,
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.1.2",
+    "@material-ui/icons": "^3.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5"
